k8s_loesungen/5_service_ingress/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
  type: ClusterIP
