k8s_loesungen/5_service_ingress/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: schulung-demo-sis.jcon2019.cloud.viadee.de
      http:
        paths:
          - backend:
              serviceName: demo-app
              servicePort: 80
  tls:
    - secretName: tls-jcon2019-cloud-viadee-de
